# ya_check_list

./: .gitignore  README.md  main.py  notes.ipynb  pyproject.toml
data/: DDL_CheckList_1.csv  Data_CheckList_1.csv
