[tool.poetry]
name = "shar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
clickhouse-connect = "^0.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
